0x02-shell_redirections/10-no_more_js

--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -35,6 +35,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/elkomy/alx-system_engineering-devops'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -74,27 +94,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 285ec80] commiting README.md\n",
-      " 3 files changed, 2417 insertions(+), 4 deletions(-)\n",
-      " create mode 100644 0x02-shell_redirections/README.md\n",
-      " create mode 100644 0x02. Shell, InputOutput Redirections and filters.ipynb\n",
-      "Enumerating objects: 8, done.\n",
-      "Counting objects: 100% (8/8), done.\n",
-      "Delta compression using up to 12 threads\n",
-      "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (6/6), 7.33 KiB | 7.33 MiB/s, done.\n",
-      "Total 6 (delta 2), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
-      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   b176dc5..285ec80  main -> main\n",
-      "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
+      "On branch main\n",
+      "Your branch is up to date with 'origin/main'.\n",
+      "\n",
+      "nothing to commit, working tree clean\n",
+      "Branch 'main' set up to track remote branch 'main' from 'origin'.\n",
+      "Everything up-to-date\n"
      ]
     }
    ],
@@ -107,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1572,7 +1584,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 10.Look in the mirror</h4>\n",
+    "<h4> 10.No more javascript</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1582,51 +1594,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Write a script that sets the mode of the file hello the same as olleh’s mode.\n",
-    "\n",
-    "* The file `hello` will be in the working directory\n",
-    "* The file `olleh` will be in the working directory\n",
+    "##### Write a script that deletes all the regular files (not the directories) with a `.js` extension that are present in the current directory and all its subfolders.\n",
     "\n",
     "```bash\n",
-    "julien@ubuntu:/tmp/h$ ls -l\n",
-    "total 8\n",
-    "-rwxrw-r-- 1 julien julien 42 Sep 20 14:45 10-mirror_permissions\n",
-    "-rwxr-x-wx 1 julien julien 23 Sep 20 14:25 hello\n",
-    "-rw-rw-r-- 1 julien julien  0 Sep 20 14:43 olleh\n",
-    "julien@ubuntu:/tmp/h$ ./10-mirror_permissions \n",
-    "julien@ubuntu:/tmp/h$ ls -l\n",
-    "total 8\n",
-    "-rwxrw-r-- 1 julien julien 42 Sep 20 14:45 10-mirror_permissions\n",
-    "-rw-rw-r-- 1 julien julien 23 Sep 20 14:25 hello\n",
-    "-rw-rw-r-- 1 julien julien  0 Sep 20 14:43 olleh\n",
-    "julien@ubuntu:/tmp/h$ \n",
+    "julien@ubuntu:/tmp/h$ ls -lR\n",
+    ".:\n",
+    "total 24\n",
+    "-rwxrw-r-- 1 julien julien   49 Sep 20 18:29 10-no_more_js\n",
+    "drwxrwxr-x 2 julien julien 4096 Sep 20 18:23 dir1\n",
+    "drwxrwxr-x 2 julien julien 4096 Sep 20 18:24 dir.js\n",
+    "-rw-rw-r-- 1 betty  julien   23 Sep 20 14:25 hello\n",
+    "-rw-rw-r-- 1 julien julien  982 Sep 20 18:21 iacta\n",
+    "-rw-rw-r-- 1 julien julien  329 Sep 20 18:18 ls_cwd_content\n",
+    "-rw-rw-r-- 1 julien julien    0 Sep 20 18:23 main.js\n",
+    "\n",
+    "./dir1:\n",
+    "total 0\n",
+    "-rw-rw-r-- 1 julien julien 0 Sep 20 18:23 code.js\n",
+    "\n",
+    "./dir.js:\n",
+    "total 0\n",
+    "julien@ubuntu:/tmp/h$ ./10-no_more_js \n",
+    "julien@ubuntu:/tmp/h$ ls -lR\n",
+    ".:\n",
+    "total 24\n",
+    "-rwxrw-r-- 1 julien julien   49 Sep 20 18:29 10-no_more_js\n",
+    "drwxrwxr-x 2 julien julien 4096 Sep 20 18:29 dir1\n",
+    "drwxrwxr-x 2 julien julien 4096 Sep 20 18:24 dir.js\n",
+    "-rw-rw-r-- 1 betty  julien   23 Sep 20 14:25 hello\n",
+    "-rw-rw-r-- 1 julien julien  982 Sep 20 18:21 iacta\n",
+    "-rw-rw-r-- 1 julien julien  329 Sep 20 18:18 ls_cwd_content\n",
+    "\n",
+    "./dir1:\n",
+    "total 0\n",
+    "\n",
+    "./dir.js:\n",
+    "total 0\n",
+    "julien@ubuntu:/tmp/h$  \n",
     "```\n",
-    "Note: the mode of `olleh` will not always be 664. Make sure your script works for any mode.\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x00-shell_basics`\n",
-    "* File: `10-back`"
+    "* Directory: `0x02-shell_redirections`\n",
+    "* File: `10-no_more_js`"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting 0x01-shell_permissions/10-mirror_permissions\n"
-     ]
-    }
-   ],
    "source": [
-    "%%file 0x01-shell_permissions/10-mirror_permissions\n",
-    "#!/bin/bash\n",
-    "chmod --reference=olleh hello"
+    "```bash\n",
+    "find [starting_directory] [options] [actions]\n",
+    "```"
    ]
   },
   {
@@ -1635,25 +1655,27 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "chmod: failed to get attributes of 'olleh': No such file or directory\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/elkomy/alx-system_engineering-devops\n"
+      "Writing 0x02-shell_redirections/10-no_more_js\n"
      ]
     }
    ],
    "source": [
+    "%%file 0x02-shell_redirections/10-no_more_js\n",
+    "#!/bin/bash\n",
+    "find . ! -name \"*.js\" -type f -delete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%bash\n",
-    "chmod u+x 0x01-shell_permissions/10-mirror_permissions\n",
-    "source ./0x01-shell_permissions/10-mirror_permissions\n",
-    "pwd\n"
+    "chmod u+x 0x02-shell_redirections/10-no_more_js\n"
    ]
   },
   {
@@ -1681,7 +1703,7 @@
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"olleh\"\n",
+    "git commit -m \"0x02-shell_redirections/10-no_more_js\"\n",
     "git push"
    ]
   },
