0x02-shell_redirections/10-no_more_js

--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -1665,7 +1665,26 @@
    "source": [
     "%%file 0x02-shell_redirections/10-no_more_js\n",
     "#!/bin/bash\n",
-    "find . ! -name \"*.js\" -type f -delete"
+    "find . ! -name \"*.js\" -type f -delete #this is the wrong one becuase it deletes all the files but the .js files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting 0x02-shell_redirections/10-no_more_js\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x02-shell_redirections/10-no_more_js\n",
+    "#!/bin/bash\n",
+    "find . -type f -name \"*.js\" -delete"
    ]
   },
   {
@@ -1680,15 +1699,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main f9834e8] olleh\n",
-      " 1 file changed, 5 insertions(+), 5 deletions(-)\n"
+      "[main b28a4b1] 0x02-shell_redirections/10-no_more_js\n",
+      " 2 files changed, 85 insertions(+), 61 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/10-no_more_js\n"
      ]
     },
     {
@@ -1696,7 +1716,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   0a15ffa..f9834e8  main -> main\n"
+      "   44e827b..b28a4b1  main -> main\n"
      ]
     }
    ],
