--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -1665,7 +1665,8 @@
    "source": [
     "%%file 0x02-shell_redirections/10-no_more_js\n",
     "#!/bin/bash\n",
-    "find . ! -name \"*.js\" -type f -delete #this is the wrong one becuase it deletes all the files but the .js files"
+    "find . ! -name \"*.js\" -type f -delete \n",
+    "#this is the wrong one becuase it deletes all the files but the .js files"
    ]
   },
   {
@@ -1689,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1699,16 +1700,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main b28a4b1] 0x02-shell_redirections/10-no_more_js\n",
-      " 2 files changed, 85 insertions(+), 61 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/10-no_more_js\n"
+      "[main 8c82d61] 0x02-shell_redirections/10-no_more_js\n",
+      " 2 files changed, 26 insertions(+), 6 deletions(-)\n"
      ]
     },
     {
@@ -1716,7 +1716,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   44e827b..b28a4b1  main -> main\n"
+      "   b28a4b1..8c82d61  main -> main\n"
      ]
     }
    ],
@@ -1736,7 +1736,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 11.Directories</h4>\n",
+    "<h4> 11.Don't just count your directories, make your directories count</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1746,54 +1746,103 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Create a script that adds execute permission to all subdirectories of the current directory for the owner, the group owner and all other users.\n",
+    "##### Write a script that counts the number of directories and sub-directories in the current directory. \n",
+    "* The current and parent directories should not be taken into account.\n",
+    "* Hidden directories should be counted.\n",
+    "```bash\n",
+    "julien@production-503e7013:~/shell/fun_with_the_shell$ ls -lRa\n",
+    ".:\n",
+    "total 32\n",
+    "drwxrwxr-x 3 julien julien 4096 Jan 20 03:53 .\n",
+    "drwxrwxr-x 3 julien julien 4096 Jan 20 02:58 ..\n",
+    "-rwxr--r-- 1 julien julien 43 Jan 20 02:59 0-commas\n",
+    "-rwxr--r-- 1 julien julien 47 Jan 20 02:50 1-empty_casks\n",
+    "-rwxrw-r-- 1 julien julien 68 Jan 20 03:35 2-gifs\n",
+    "-rwxrw-r-- 1 julien julien 47 Jan 20 03:53 3-directories\n",
+    "-rw-rw-r-- 1 julien julien 14 Jan 20 03:35 Makefile\n",
+    "drwxrwxr-x 4 julien julien 4096 Jan 20 03:42 test_dir\n",
     "\n",
-    "Regular files should not be changed.\n",
+    "./test_dir:\n",
+    "total 16\n",
+    "drwxrwxr-x 4 julien julien 4096 Jan 20 03:42 .\n",
+    "drwxrwxr-x 3 julien julien 4096 Jan 20 03:53 ..\n",
+    "-rw-rw-r-- 1 julien julien 0 Jan 20 03:40 .horrible_selfie.gif\n",
+    "-rw-rw-r-- 1 julien julien 0 Jan 20 03:23 README.md\n",
+    "-rw-rw-r-- 1 julien julien 0 Jan 20 03:17 docker.gif\n",
+    "-rw-rw-r-- 1 julien julien 0 Jan 20 03:17 file.sh\n",
+    "drwxrwxr-x 2 julien julien 4096 Jan 20 03:23 photos\n",
+    "drwxrwxr-x 2 julien julien 4096 Jan 20 03:23 rep.gif\n",
+    "\n",
+    "./test_dir/photos:\n",
+    "total 8\n",
+    "drwxrwxr-x 2 julien julien 4096 Jan 20 03:23 .\n",
+    "drwxrwxr-x 4 julien julien 4096 Jan 20 03:42 ..\n",
+    "-rw-rw-r-- 1 julien julien 0 Jan 20 03:23 cat.gif\n",
+    "-rw-rw-r-- 1 julien julien 0 Jan 20 03:22 index.html\n",
+    "-rw-rw-r-- 1 julien julien 0 Jan 20 03:23 main.gif\n",
+    "-rw-rw-r-- 1 julien julien 0 Jan 20 03:23 rudy_rigot.gif\n",
+    "\n",
+    "./test_dir/rep.gif:\n",
+    "total 8\n",
+    "drwxrwxr-x 2 julien julien 4096 Jan 20 03:23 .\n",
+    "drwxrwxr-x 4 julien julien 4096 Jan 20 03:42 ..\n",
+    "julien@production-503e7013:~/shell/fun_with_the_shell$ ./11-directories\n",
+    "3\n",
+    "julien@production-503e7013:~/shell/fun_with_the_shell$\n",
+    "```\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x01-shell_permissions`\n",
-    "* File: `11-directories_permissions`"
+    "* Directory: `0x02-shell_redirections`\n",
+    "* File: `11-directories`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x01-shell_permissions/11-directories_permissions\n"
+      "Overwriting 0x02-shell_redirections/11-directories\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x01-shell_permissions/11-directories_permissions\n",
+    "%%file 0x02-shell_redirections/11-directories\n",
     "#!/bin/bash\n",
-    "chmod -R ugo+X ."
+    "find . -mindepth 1 -type d | wc -l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/elkomy/alx-system_engineering-devops\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x01-shell_permissions/11-directories_permissions\n",
-    "source ./0x01-shell_permissions/11-directories_permissions\n",
-    "pwd\n"
+    "chmod u+x  0x02-shell_redirections/11-directories\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./0x02-shell_redirections/11-directories"
    ]
   },
   {
@@ -1821,7 +1870,7 @@
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"11-directories_permissions\"\n",
+    "git commit -m \"0x02-shell_redirections/11-directories\"\n",
     "git push"
    ]
   },
