0x02-shell_redirections/12-newest_files

--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -1847,15 +1847,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 8950d55] 11-directories_permissions\n",
-      " 2 files changed, 10 insertions(+), 17 deletions(-)\n"
+      "[main 73088ef] 0x02-shell_redirections/11-directories\n",
+      " 2 files changed, 75 insertions(+), 24 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/11-directories\n"
      ]
     },
     {
@@ -1863,7 +1864,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   1a92d84..8950d55  main -> main\n"
+      "   8c82d61..73088ef  main -> main\n"
      ]
     }
    ],
@@ -1883,7 +1884,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 12.More directoreis></h4>\n",
+    "<h4> 12.What's new</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1893,63 +1894,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Create a script that creates a directory called `my_dir` with permissions 751 in the working directory.\n",
+    "##### Create a script that displays the 10 newest files in the current directory.\n",
+    "Requirements:\n",
+    "* One file per line\n",
+    "* Sorted from the newest to the oldest\n",
     "\n",
     "\n",
     "```bash\n",
-    "julien@ubuntu:/tmp/h$ ls -l\n",
-    "total 20\n",
-    "-rwxrwxr-x 1 julien julien   39 Sep 20 14:59 12-directory_permissions\n",
-    "drwx--x--x 2 julien julien 4096 Sep 20 14:49 dir0\n",
-    "drwx--x--x 2 julien julien 4096 Sep 20 14:49 dir1\n",
-    "drwx--x--x 2 julien julien 4096 Sep 20 14:49 dir2\n",
-    "-rw-rw-r-- 1 julien julien   23 Sep 20 14:25 hello\n",
-    "julien@ubuntu:/tmp/h$ ./12-directory_permission s\n",
-    "julien@ubuntu:/tmp/h$ ls -l\n",
-    "total 24\n",
-    "-rwxrwxr-x 1 julien julien   39 Sep 20 14:59 12-directory_permissions\n",
-    "drwx--x--x 2 julien julien 4096 Sep 20 14:49 dir0\n",
-    "drwx--x--x 2 julien julien 4096 Sep 20 14:49 dir1\n",
-    "drwx--x--x 2 julien julien 4096 Sep 20 14:49 dir2\n",
-    "drwxr-x--x 2 julien julien 4096 Sep 20 14:59 my_dir\n",
-    "-rw-rw-r-- 1 julien julien   23 Sep 20 14:25 hello\n",
-    "julien@ubuntu:/tmp/h$ \n",
+    "alex@ubuntu:/tmp$ ls -l\n",
+    "total 7\n",
+    "-rwxr-xr-x 1 501 dialout  32 Sep 27 23:51 0-hello_world\n",
+    "-rwxr-xr-x 1 501 dialout  46 Sep 28 11:09 10-no_more_js\n",
+    "-rwxr-xr-x 1 501 dialout  43 Sep 28 11:19 11-directories\n",
+    "-rwxr-xr-x 1 501 dialout  30 Sep 29 13:43 12-newest_files\n",
+    "-rwxr-xr-x 1 501 dialout  28 Sep 27 23:54 1-confused_smiley\n",
+    "-rwxr-xr-x 1 501 dialout  28 Sep 27 23:58 2-hellofile\n",
+    "-rwxr-xr-x 1 501 dialout  39 Sep 27 23:58 3-twofiles\n",
+    "-rwxr-xr-x 1 501 dialout  33 Sep 27 23:59 4-lastlines\n",
+    "-rwxr-xr-x 1 501 dialout  33 Sep 28 00:00 5-firstlines\n",
+    "-rwxr-xr-x 1 501 dialout  28 Sep 28 00:25 6-third_line\n",
+    "-rwxr-xr-x 1 501 dialout 110 Sep 28 00:34 7-file\n",
+    "-rwxr-xr-x 1 501 dialout  36 Sep 28 00:34 8-cwd_state\n",
+    "-rwxr-xr-x 1 501 dialout  35 Sep 28 00:35 9-duplicate_last_line\n",
+    "-rw-r--r-- 1 501 dialout  19 Sep 27 23:51 README.md\n",
+    "alex@ubuntu:/tmp$ ./12-newest_files \n",
+    "12-newest_files\n",
+    "11-directories\n",
+    "10-no_more_js\n",
+    "9-duplicate_last_line\n",
+    "7-file\n",
+    "8-cwd_state\n",
+    "6-third_line\n",
+    "5-firstlines\n",
+    "4-lastlines\n",
+    "3-twofiles\n",
+    "alex@ubuntu:/tmp$ \n",
     "```\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x01-shell_permissions`\n",
-    "* File: `12-directory_permissions`"
+    "* Directory: `0x02-shell_redirections`\n",
+    "* File: `12-newest_files`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x01-shell_permissions/12-directory_permissions\n"
+      "Overwriting 0x02-shell_redirections/12-newest_files\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x01-shell_permissions/12-directory_permissions\n",
+    "%%file 0x02-shell_redirections/12-newest_files\n",
     "#!/bin/bash\n",
-    "mkdir -m 751 my_dir"
+    "ls -t |head -n 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0x02. Shell, InputOutput Redirections and filters.ipynb\n",
+      "0x02-shell_redirections\n",
+      "0x00-shell_basics\n",
+      "0x01-shell_permissions\n",
+      "0x01-shell_permissions.ipynb\n",
+      "README.md\n",
+      "\\*\\\\'\"Best School\"\\'\\\\*$\\?\\*\\*\\*\\*\\*:)\n",
+      "hello\n",
+      "iacta\n",
+      "ls_cwd_content\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x01-shell_permissions/12-directory_permissions\n",
-    "source ./0x01-shell_permissions/12-directory_permissions"
+    "chmod u+x 0x02-shell_redirections/12-newest_files\n",
+    "source ./0x02-shell_redirections/12-newest_files"
    ]
   },
   {
@@ -1978,7 +2010,7 @@
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"12-directory_permissions\"\n",
+    "git commit -m \"0x02-shell_redirections/12-newest_files\"\n",
     "git push"
    ]
   },
