--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -1986,16 +1986,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 4266f1e] 12-directory_permissions\n",
-      " 2 files changed, 37 insertions(+), 29 deletions(-)\n",
-      " create mode 100755 0x01-shell_permissions/12-directory_permissions\n"
+      "[main 7d5007d] 0x02-shell_redirections/12-newest_files\n",
+      " 2 files changed, 68 insertions(+), 34 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/12-newest_files\n"
      ]
     },
     {
@@ -2003,7 +2003,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   8950d55..4266f1e  main -> main\n"
+      "   73088ef..7d5007d  main -> main\n"
      ]
     }
    ],
@@ -2023,7 +2023,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 13. Change group</h4>\n",
+    "<h4> 13. Being unique is better than being perfect</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -2033,87 +2033,104 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Write a script that changes the group owner to school for the file hello\n",
+    "##### Create a script that takes a list of words as input and prints only words that appear exactly once. \n",
     "\n",
-    "* The file hello will be in the working directory\n",
+    "* Input format: One line, one word\n",
+    "* Output format: One line, one word\n",
+    "* Words should be sorted\n",
     "\n",
     "```bash\n",
-    "julien@ubuntu:/tmp/h$ ls -l\n",
-    "total 24\n",
-    "-rwxrwxr-x 1 julien julien   34 Sep 20 15:03 13-change_group\n",
-    "drwx--x--x 2 julien julien 4096 Sep 20 14:49 dir0\n",
-    "drwx--x--x 2 julien julien 4096 Sep 20 14:49 dir1\n",
-    "drwx--x--x 2 julien julien 4096 Sep 20 14:49 dir2\n",
-    "drwxr-x--x 2 julien julien 4096 Sep 20 14:59 my_dir\n",
-    "-rw-rw-r-- 1 julien julien   23 Sep 20 14:25 hello\n",
-    "julien@ubuntu:/tmp/h$ sudo ./13-change_group \n",
-    "julien@ubuntu:/tmp/h$ ls -l\n",
-    "total 24\n",
-    "-rwxrwxr-x 1 julien julien      34 Sep 20 15:03 13-change_group\n",
-    "drwx--x--x 2 julien julien    4096 Sep 20 14:49 dir0\n",
-    "drwx--x--x 2 julien julien    4096 Sep 20 14:49 dir1\n",
-    "drwx--x--x 2 julien julien    4096 Sep 20 14:49 dir2\n",
-    "drwxr-x--x 2 julien julien    4096 Sep 20 14:59 my_dir\n",
-    "-rw-rw-r-- 1 julien school   23 Sep 20 14:25 hello\n",
-    "julien@ubuntu:/tmp/h$ \n",
+    "julien@ubuntu:/tmp/0x02$ cat list \n",
+    "C#\n",
+    "C\n",
+    "Javascript\n",
+    "Perl\n",
+    "PHP\n",
+    "PHP\n",
+    "ASP\n",
+    "R\n",
+    "Go\n",
+    "C#\n",
+    "C++\n",
+    "R\n",
+    "Perl\n",
+    "Javascript\n",
+    "Javascript\n",
+    "Python\n",
+    "Javascript\n",
+    "Javascript\n",
+    "Javascript\n",
+    "Java\n",
+    "Java\n",
+    "Python\n",
+    "Javascript\n",
+    "Javascript\n",
+    "Javascript\n",
+    "ASP\n",
+    "julien@ubuntu:/tmp/0x02$ cat list | ./13-unique \n",
+    "C\n",
+    "C++\n",
+    "Go\n",
+    "julien@ubuntu:/tmp/0x02$ \n",
     "```\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x01-shell_permissions`\n",
-    "* File: `13-change_group`"
+    "* Directory: `0x02-shell_redirections`\n",
+    "* File: `13-unique`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x01-shell_permissions/13-change_group\n"
+      "Writing 0x02-shell_redirections/13-unique\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x01-shell_permissions/13-change_group\n",
+    "%%file 0x02-shell_redirections/13-unique\n",
     "#!/bin/bash\n",
-    "chown :school hello"
+    "sort list | unique -u"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "chmod u+x 0x02-shell_redirections/13-unique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "chown: invalid group: ‘:school’\n"
+      "./0x02-shell_redirections/13-unique: line 2: unique: command not found\n"
      ]
     },
     {
-     "ename": "CalledProcessError",
-     "evalue": "Command 'b'chmod u+x 0x01-shell_permissions/13-change_group\\nsource ./0x01-shell_permissions/13-change_group\\n'' returned non-zero exit status 1.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_cell_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbash\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchmod u+x 0x01-shell_permissions/13-change_group\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124msource ./0x01-shell_permissions/13-change_group\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/interactiveshell.py:2517\u001b[0m, in \u001b[0;36mInteractiveShell.run_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2515\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuiltin_trap:\n\u001b[1;32m   2516\u001b[0m     args \u001b[38;5;241m=\u001b[39m (magic_arg_s, cell)\n\u001b[0;32m-> 2517\u001b[0m     result \u001b[38;5;241m=\u001b[39m fn(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m   2519\u001b[0m \u001b[38;5;66;03m# The code below prevents the output from being displayed\u001b[39;00m\n\u001b[1;32m   2520\u001b[0m \u001b[38;5;66;03m# when using magics with decorator @output_can_be_silenced\u001b[39;00m\n\u001b[1;32m   2521\u001b[0m \u001b[38;5;66;03m# when the last Python token in the expression is a ';'.\u001b[39;00m\n\u001b[1;32m   2522\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(fn, magic\u001b[38;5;241m.\u001b[39mMAGIC_OUTPUT_CAN_BE_SILENCED, \u001b[38;5;28;01mFalse\u001b[39;00m):\n",
-      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:154\u001b[0m, in \u001b[0;36mScriptMagics._make_script_magic.<locals>.named_script_magic\u001b[0;34m(line, cell)\u001b[0m\n\u001b[1;32m    152\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    153\u001b[0m     line \u001b[38;5;241m=\u001b[39m script\n\u001b[0;32m--> 154\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshebang(line, cell)\n",
-      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:314\u001b[0m, in \u001b[0;36mScriptMagics.shebang\u001b[0;34m(self, line, cell)\u001b[0m\n\u001b[1;32m    309\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m args\u001b[38;5;241m.\u001b[39mraise_error \u001b[38;5;129;01mand\u001b[39;00m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m    310\u001b[0m     \u001b[38;5;66;03m# If we get here and p.returncode is still None, we must have\u001b[39;00m\n\u001b[1;32m    311\u001b[0m     \u001b[38;5;66;03m# killed it but not yet seen its return code. We don't wait for it,\u001b[39;00m\n\u001b[1;32m    312\u001b[0m     \u001b[38;5;66;03m# in case it's stuck in uninterruptible sleep. -9 = SIGKILL\u001b[39;00m\n\u001b[1;32m    313\u001b[0m     rc \u001b[38;5;241m=\u001b[39m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m9\u001b[39m\n\u001b[0;32m--> 314\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m CalledProcessError(rc, cell)\n",
-      "\u001b[0;31mCalledProcessError\u001b[0m: Command 'b'chmod u+x 0x01-shell_permissions/13-change_group\\nsource ./0x01-shell_permissions/13-change_group\\n'' returned non-zero exit status 1."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
      ]
     }
    ],
    "source": [
-    "%%bash\n",
-    "chmod u+x 0x01-shell_permissions/13-change_group\n",
-    "source ./0x01-shell_permissions/13-change_group"
+    "!./0x02-shell_redirections/13-unique"
    ]
   },
   {
@@ -2142,7 +2159,7 @@
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"ghange group\"\n",
+    "git commit -m \"0x02-shell_redirections/13-unique\"\n",
     "git push"
    ]
   },
