0x02-shell_redirections/13-unique

--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -2082,21 +2082,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x02-shell_redirections/13-unique\n"
+      "Overwriting 0x02-shell_redirections/13-unique\n"
      ]
     }
    ],
    "source": [
     "%%file 0x02-shell_redirections/13-unique\n",
     "#!/bin/bash\n",
-    "sort list | unique -u"
+    "sort | unique -u"
    ]
   },
   {
@@ -2135,16 +2135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 048565d] ghange group\n",
-      " 2 files changed, 55 insertions(+), 39 deletions(-)\n",
-      " create mode 100755 0x01-shell_permissions/13-change_group\n"
+      "[main 6b69f39] 0x02-shell_redirections/13-unique\n",
+      " 2 files changed, 69 insertions(+), 50 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/13-unique\n"
      ]
     },
     {
@@ -2152,7 +2152,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   4266f1e..048565d  main -> main\n"
+      "   7d5007d..6b69f39  main -> main\n"
      ]
     }
    ],
