0x02-shell_redirections/13-unique

--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -2082,7 +2082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2096,12 +2096,12 @@
    "source": [
     "%%file 0x02-shell_redirections/13-unique\n",
     "#!/bin/bash\n",
-    "sort | unique -u"
+    "sort list | uniq -u"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2111,21 +2111,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./0x02-shell_redirections/13-unique: line 2: unique: command not found\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "^C\n"
+      "sort: cannot read: list: No such file or directory\n"
      ]
     }
    ],
@@ -2135,16 +2128,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 6b69f39] 0x02-shell_redirections/13-unique\n",
-      " 2 files changed, 69 insertions(+), 50 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/13-unique\n"
+      "[main 39b36f1] 0x02-shell_redirections/13-unique\n",
+      " 1 file changed, 8 insertions(+), 8 deletions(-)\n"
      ]
     },
     {
@@ -2152,7 +2144,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   7d5007d..6b69f39  main -> main\n"
+      "   6b69f39..39b36f1  main -> main\n"
      ]
     }
    ],
