--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -2082,7 +2082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2096,7 +2096,7 @@
    "source": [
     "%%file 0x02-shell_redirections/13-unique\n",
     "#!/bin/bash\n",
-    "sort list | uniq -u"
+    "sort | uniq -u"
    ]
   },
   {
@@ -2111,32 +2111,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sort: cannot read: list: No such file or directory\n"
+      "Writing 0x02-shell_redirections/list\n"
      ]
     }
    ],
    "source": [
-    "!./0x02-shell_redirections/13-unique"
+    "%%file 0x02-shell_redirections/list\n",
+    "C#\n",
+    "C\n",
+    "Javascript\n",
+    "Perl\n",
+    "PHP\n",
+    "PHP\n",
+    "ASP\n",
+    "R\n",
+    "Go\n",
+    "C#\n",
+    "C++\n",
+    "R\n",
+    "Perl\n",
+    "Javascript\n",
+    "Javascript\n",
+    "Python\n",
+    "Javascript\n",
+    "Javascript\n",
+    "Javascript\n",
+    "Java\n",
+    "Java\n",
+    "Python\n",
+    "Javascript\n",
+    "Javascript\n",
+    "Javascript\n",
+    "ASP"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 39b36f1] 0x02-shell_redirections/13-unique\n",
-      " 1 file changed, 8 insertions(+), 8 deletions(-)\n"
+      "C\n",
+      "C++\n",
+      "Go\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat 0x02-shell_redirections/list | ./0x02-shell_redirections/13-unique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 97e142d] 0x02-shell_redirections/13-unique\n",
+      " 2 files changed, 10 insertions(+), 18 deletions(-)\n"
      ]
     },
     {
@@ -2144,7 +2189,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   6b69f39..39b36f1  main -> main\n"
+      "   39b36f1..97e142d  main -> main\n"
      ]
     }
    ],
