0x02-shell_redirections/15-countthatword

--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -2278,16 +2278,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main d134f28] 0x01-shell_permissions/100-change_owner_and_group\n",
-      " 2 files changed, 53 insertions(+), 33 deletions(-)\n",
-      " create mode 100755 0x01-shell_permissions/100-change_owner_and_group\n"
+      "[main 33ab5d1] 0x02-shell_redirections/14-findthatword\n",
+      " 2 files changed, 25 insertions(+), 51 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/14-findthatword\n"
      ]
     },
     {
@@ -2295,14 +2295,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   048565d..d134f28  main -> main\n"
+      "   66b1d64..33ab5d1  main -> main\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"0x01-shell_permissions/100-change_owner_and_group\"\n",
+    "git commit -m \"0x02-shell_redirections/14-findthatword\"\n",
     "git push"
    ]
   },
@@ -2315,7 +2315,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 15. Symbolic links</h4>\n",
+    "<h4> 15. Count that word</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -2325,83 +2325,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Write a script that changes the owner and the group owner of _hello to vincent and staff respectively.\n",
+    "##### Display the number of lines that contain the pattern \"bin\" in the file /etc/passwd.\n",
     "\n",
-    "* The file _hello is in the working directory\n",
-    "* The file _hello is a symbolic link\n",
     "\n",
     "```bash\n",
-    "julien@ubuntu:/tmp/h$ ls -l\n",
-    "total 24\n",
-    "-rwxrwxr-x 1 julien julien   44 Sep 20 15:12 101-symbolic_link_permissions\n",
-    "-rw-rw-r-- 1 julien julien   23 Sep 20 14:25 hello\n",
-    "lrwxrwxrwx 1 julien julien    5 Sep 20 15:10 _hello -> hello\n",
-    "julien@ubuntu:/tmp/h$ sudo ./101-symbolic_link_permissions \n",
-    "julien@ubuntu:/tmp/h$ ls -l\n",
-    "total 24\n",
-    "-rwxrwxr-x 1 julien julien      44 Sep 20 15:12 101-symbolic_link_permissions\n",
-    "-rw-rw-r-- 1 julien julien      23 Sep 20 14:25 hello\n",
-    "lrwxrwxrwx 1 vincent  staff    5 Sep 20 15:10 _hello -> hello\n",
-    "julien@ubuntu:/tmp/h$ \n",
+    "$ ./15-countthatword\n",
+    "81\n",
+    "$ \n",
     "```\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x01-shell_permissions`\n",
-    "* File: `101-symbolic_link_permissions`"
+    "* Directory: `0x02-shell_redirections`\n",
+    "* File: `15-countthatword`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x01-shell_permissions/101-symbolic_link_permissions\n"
+      "Writing 0x02-shell_redirections/15-countthatword\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x01-shell_permissions/101-symbolic_link_permissions\n",
+    "%%file 0x02-shell_redirections/15-countthatword\n",
     "#!/bin/bash\n",
-    "chown -h vincent:staff _hello"
+    "grep \"bin\" /etc/passwd | wc -l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "chown: invalid user: ‘vincent:staff’\n"
-     ]
-    },
-    {
-     "ename": "CalledProcessError",
-     "evalue": "Command 'b'chmod u+x  0x01-shell_permissions/101-symbolic_link_permissions\\nsource ./0x01-shell_permissions/101-symbolic_link_permissions\\n'' returned non-zero exit status 1.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[27], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_cell_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbash\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchmod u+x  0x01-shell_permissions/101-symbolic_link_permissions\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124msource ./0x01-shell_permissions/101-symbolic_link_permissions\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/interactiveshell.py:2517\u001b[0m, in \u001b[0;36mInteractiveShell.run_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2515\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuiltin_trap:\n\u001b[1;32m   2516\u001b[0m     args \u001b[38;5;241m=\u001b[39m (magic_arg_s, cell)\n\u001b[0;32m-> 2517\u001b[0m     result \u001b[38;5;241m=\u001b[39m fn(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m   2519\u001b[0m \u001b[38;5;66;03m# The code below prevents the output from being displayed\u001b[39;00m\n\u001b[1;32m   2520\u001b[0m \u001b[38;5;66;03m# when using magics with decorator @output_can_be_silenced\u001b[39;00m\n\u001b[1;32m   2521\u001b[0m \u001b[38;5;66;03m# when the last Python token in the expression is a ';'.\u001b[39;00m\n\u001b[1;32m   2522\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(fn, magic\u001b[38;5;241m.\u001b[39mMAGIC_OUTPUT_CAN_BE_SILENCED, \u001b[38;5;28;01mFalse\u001b[39;00m):\n",
-      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:154\u001b[0m, in \u001b[0;36mScriptMagics._make_script_magic.<locals>.named_script_magic\u001b[0;34m(line, cell)\u001b[0m\n\u001b[1;32m    152\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    153\u001b[0m     line \u001b[38;5;241m=\u001b[39m script\n\u001b[0;32m--> 154\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshebang(line, cell)\n",
-      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:314\u001b[0m, in \u001b[0;36mScriptMagics.shebang\u001b[0;34m(self, line, cell)\u001b[0m\n\u001b[1;32m    309\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m args\u001b[38;5;241m.\u001b[39mraise_error \u001b[38;5;129;01mand\u001b[39;00m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m    310\u001b[0m     \u001b[38;5;66;03m# If we get here and p.returncode is still None, we must have\u001b[39;00m\n\u001b[1;32m    311\u001b[0m     \u001b[38;5;66;03m# killed it but not yet seen its return code. We don't wait for it,\u001b[39;00m\n\u001b[1;32m    312\u001b[0m     \u001b[38;5;66;03m# in case it's stuck in uninterruptible sleep. -9 = SIGKILL\u001b[39;00m\n\u001b[1;32m    313\u001b[0m     rc \u001b[38;5;241m=\u001b[39m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m9\u001b[39m\n\u001b[0;32m--> 314\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m CalledProcessError(rc, cell)\n",
-      "\u001b[0;31mCalledProcessError\u001b[0m: Command 'b'chmod u+x  0x01-shell_permissions/101-symbolic_link_permissions\\nsource ./0x01-shell_permissions/101-symbolic_link_permissions\\n'' returned non-zero exit status 1."
+      "34\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "chmod u+x  0x01-shell_permissions/101-symbolic_link_permissions\n",
-    "source ./0x01-shell_permissions/101-symbolic_link_permissions"
+    "chmod u+x  0x02-shell_redirections/15-countthatword\n",
+    "source ./0x02-shell_redirections/15-countthatword"
    ]
   },
   {
@@ -2430,7 +2405,7 @@
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"101\"\n",
+    "git commit -m \"0x02-shell_redirections/15-countthatword\"\n",
     "git push"
    ]
   },
