--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -2381,16 +2381,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main de06374] 101\n",
-      " 2 files changed, 45 insertions(+), 59 deletions(-)\n",
-      " create mode 100755 0x01-shell_permissions/101-symbolic_link_permissions\n"
+      "[main fb17851] 0x02-shell_redirections/15-countthatword\n",
+      " 2 files changed, 25 insertions(+), 48 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/15-countthatword\n"
      ]
     },
     {
@@ -2398,7 +2398,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   d134f28..de06374  main -> main\n"
+      "   33ab5d1..fb17851  main -> main\n"
      ]
     }
    ],
@@ -2418,7 +2418,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 16. If only</h4>\n",
+    "<h4> 16. What's next?</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -2428,80 +2428,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Write a script that changes the owner of the file hello to betty only if it is owned by the user guillaume.\n",
-    "\n",
-    "* The file hello will be in the working directory\n",
+    "##### Display lines containing the pattern \"root\" and 3 lines after them in the file `/etc/passwd`\n",
     "\n",
     "\n",
     "```bash\n",
-    "julien@ubuntu:/tmp/h$ ls -l\n",
-    "total 24\n",
-    "-rwxrwxr-x 1 julien    julien      47 Sep 20 15:18 102-if_only \n",
-    "-rw-rw-r-- 1 guillaume julien      23 Sep 20 14:25 hello\n",
-    "julien@ubuntu:/tmp/h$ sudo ./102-if_only \n",
-    "julien@ubuntu:/tmp/h$ ls -l\n",
-    "total 24\n",
-    "-rwxrwxr-x 1 julien julien      47 Sep 20 15:18 102-if_only \n",
-    "-rw-rw-r-- 1 betty  julien      23 Sep 20 14:25 hello\n",
-    "julien@ubuntu:/tmp/h$  ```\n",
+    "$ ./16-whatsnext\n",
+    "root:*:0:0:System Administrator:/var/root:/bin/sh\n",
+    "daemon:*:1:1:System Services:/var/root:/usr/bin/false\n",
+    "_uucp:*:4:4:Unix to Unix Copy Protocol:/var/spool/uucp:/usr/sbin/uucico\n",
+    "_taskgated:*:13:13:Task Gate Daemon:/var/empty:/usr/bin/false\n",
+    "_networkd:*:24:24:Network Services:/var/networkd:/usr/bin/false\n",
+    "--\n",
+    "_cvmsroot:*:212:212:CVMS Root:/var/empty:/usr/bin/false\n",
+    "_usbmuxd:*:213:213:iPhone OS Device Helper:/var/db/lockdown:/usr/bin/false\n",
+    "_dovecot:*:214:6:Dovecot Administrator:/var/empty:/usr/bin/false\n",
+    "_dpaudio:*:215:215:DP Audio:/var/empty:/usr/bin/false\n",
+    "$\n",
+    "```\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x01-shell_permissions`\n",
-    "* File: `102-if_only`"
+    "* Directory: `0x02-shell_redirections`\n",
+    "* File: `16-whatsnext`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x01-shell_permissions/102-if_only\n"
+      "Overwriting 0x02-shell_redirections/16-whatsnext\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x01-shell_permissions/102-if_only\n",
+    "%%file 0x02-shell_redirections/16-whatsnext\n",
     "#!/bin/bash\n",
-    "chown --from=guillaume betty hello"
+    "grep -A 3 \"root\" /etc/passwd "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "chown: invalid user: ‘guillaume’\n"
-     ]
-    },
-    {
-     "ename": "CalledProcessError",
-     "evalue": "Command 'b'chmod u+x 0x01-shell_permissions/102-if_only\\nsource ./0x01-shell_permissions/102-if_only\\n'' returned non-zero exit status 1.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[30], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_cell_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbash\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchmod u+x 0x01-shell_permissions/102-if_only\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124msource ./0x01-shell_permissions/102-if_only\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/interactiveshell.py:2517\u001b[0m, in \u001b[0;36mInteractiveShell.run_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2515\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuiltin_trap:\n\u001b[1;32m   2516\u001b[0m     args \u001b[38;5;241m=\u001b[39m (magic_arg_s, cell)\n\u001b[0;32m-> 2517\u001b[0m     result \u001b[38;5;241m=\u001b[39m fn(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m   2519\u001b[0m \u001b[38;5;66;03m# The code below prevents the output from being displayed\u001b[39;00m\n\u001b[1;32m   2520\u001b[0m \u001b[38;5;66;03m# when using magics with decorator @output_can_be_silenced\u001b[39;00m\n\u001b[1;32m   2521\u001b[0m \u001b[38;5;66;03m# when the last Python token in the expression is a ';'.\u001b[39;00m\n\u001b[1;32m   2522\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(fn, magic\u001b[38;5;241m.\u001b[39mMAGIC_OUTPUT_CAN_BE_SILENCED, \u001b[38;5;28;01mFalse\u001b[39;00m):\n",
-      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:154\u001b[0m, in \u001b[0;36mScriptMagics._make_script_magic.<locals>.named_script_magic\u001b[0;34m(line, cell)\u001b[0m\n\u001b[1;32m    152\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    153\u001b[0m     line \u001b[38;5;241m=\u001b[39m script\n\u001b[0;32m--> 154\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshebang(line, cell)\n",
-      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:314\u001b[0m, in \u001b[0;36mScriptMagics.shebang\u001b[0;34m(self, line, cell)\u001b[0m\n\u001b[1;32m    309\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m args\u001b[38;5;241m.\u001b[39mraise_error \u001b[38;5;129;01mand\u001b[39;00m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m    310\u001b[0m     \u001b[38;5;66;03m# If we get here and p.returncode is still None, we must have\u001b[39;00m\n\u001b[1;32m    311\u001b[0m     \u001b[38;5;66;03m# killed it but not yet seen its return code. We don't wait for it,\u001b[39;00m\n\u001b[1;32m    312\u001b[0m     \u001b[38;5;66;03m# in case it's stuck in uninterruptible sleep. -9 = SIGKILL\u001b[39;00m\n\u001b[1;32m    313\u001b[0m     rc \u001b[38;5;241m=\u001b[39m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m9\u001b[39m\n\u001b[0;32m--> 314\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m CalledProcessError(rc, cell)\n",
-      "\u001b[0;31mCalledProcessError\u001b[0m: Command 'b'chmod u+x 0x01-shell_permissions/102-if_only\\nsource ./0x01-shell_permissions/102-if_only\\n'' returned non-zero exit status 1."
+      "root:x:0:0:root:/root:/bin/bash\n",
+      "daemon:x:1:1:daemon:/usr/sbin:/usr/sbin/nologin\n",
+      "bin:x:2:2:bin:/bin:/usr/sbin/nologin\n",
+      "sys:x:3:3:sys:/dev:/usr/sbin/nologin\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x01-shell_permissions/102-if_only\n",
-    "source ./0x01-shell_permissions/102-if_only\n"
+    "chmod u+x 0x02-shell_redirections/16-whatsnext\n",
+    "source ./0x02-shell_redirections/16-whatsnext\n"
    ]
   },
   {
@@ -2530,7 +2520,7 @@
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"102\"\n",
+    "git commit -m \"16\"\n",
     "git push"
    ]
   },
